# deployments

./: .editorconfig  LICENSE  README.md
docker-compose/observability-stacks/: docker-compose.yml  otel-collector-config.yaml
docker-compose/tempo/: README.md  docker-compose.yaml  tempo-distributed.yaml  tempo.yaml
docker-compose/tempo-microservices/: docker-compose.yaml  otel.yaml  tempo.yaml
docker-compose/tempo-monolithic/: README.md  docker-compose.yaml  tempo.yaml
helm/openshift-observability-stack/: Chart.yaml  README.md  values.yaml
helm/openshift-observability-stack/templates/: namespace.yaml  (+1 more)
kubernetes/minikube-dev/: Makefile  README.md  collector_user.yaml  k6_tracing.yaml  tempostack.yaml
kubernetes/openshift-dev/: Makefile  collector_platform.yaml  collector_user.yaml  developer_auth.yaml  k6_tracing.yaml  minio.yaml  openshift_user_workload_monitoring.yaml  tempostack.yaml  uiplugin.yaml
minikube/: Makefile  README.md  collector.yaml  k6_tracing.yaml  minio.yaml  tempostack.yaml
minikube/helm/: kube-prometheus-stack.yaml
openshift/tempo/: README.md  hotrod.yaml  k6_tracing.yaml  minio.yaml  namespace.yaml  otel_collector.yaml  tempo.yaml
src/: backend.yaml  frontend.yaml  instrumentation.yaml
src/backend/: .gitignore  pyproject.toml
src/backend/src/backend/: schema.sql
src/frontend/: package-lock.json
src/tracegen/: go.sum  main.go  otel.go
src/tracegen-go/: go.mod  main.go  otel.go
src/tracegen-java/: Dockerfile  Makefile  build.gradle  settings.gradle
src/tracegen-js/: index.js  package-lock.json  package.json
(+127 files in other folders)
