[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andreas Gerstmayr", email = "agerstmayr@redhat.com" }
]
dependencies = [
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.rye.scripts]
start = "flask --app src/backend/app.py run --debug"
